-자바스크립트

--- a/02_데이터입출력.html
+++ b/02_데이터입출력.html
@@ -145,13 +145,14 @@
         <br><br>
 
         <h3>4) 선택한 input요소.value</h3>
+        <form action="#">
         아이디 : <input type="text" id="userId"><br>
         비밀번호 : <input type="password" id="userPwd"> <br>
 
         <button onclick="testInput()">클릭</button>
         <br>
         <input type="text" id ="area4">
-
+        </form>
         <script>
             function testInput(){
                 let input1 = document.getElementById("userId");
