--- a/03_요소에 접근하기.html
+++ b/03_요소에 접근하기.html
@@ -130,7 +130,9 @@
             for (let checkbox of hobbylist) {
                 console.log(checkbox);
                 if (checkbox.checked) {
+                    if(checkbox.value != "전체선택"){
                     area.innerHTML += (checkbox.value + "<br>");
+                    }
                 }
             }
 
