--- a/05_함수.html
+++ b/05_함수.html
@@ -137,6 +137,7 @@
                 alert(inputE1.value);
             }
             return alFunk;
+            // alert(inputE1.value);
         }
     </script>
     <!-- callback -->
