--- a/06_객체.html
+++ b/06_객체.html
@@ -80,14 +80,13 @@
         function test4(){
             const area4 = document.getElementById("area4");
 
-            const name = "차은우";
+            // const name = "차은우";
 
             const dog = {
                 name : "복실이",
                 kind : "비글",
                 eat : function(food){
                     area4.innerHTML += `${this.kind}종류인 ${this.name}가 ${food}를 먹고있습니다.<br>`
-
                 }
             };
 
@@ -147,7 +146,6 @@
                 }
                 
             }
-
             
             for(let i  in studentList){
                 document.querySelector('#area5').innerHTML +=
