--- a/08_이벤트.html
+++ b/08_이벤트.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .area{
+        .area {
             background-color: beige;
             height: 100px;
             border: 1px solid black;
         }
     </style>
 </head>
+
 <body>
     <!-- 정규식 -->
     <h1>이벤트(Event)</h1>
@@ -30,15 +32,15 @@
 
     <script>
         const area1 = document.getElementById("area1");
-        
+
         const btn1 = document.getElementById("btn1");
         const btn2 = document.getElementById("btn2");
 
-        btn1.onclick = function(){
+        btn1.onclick = function () {
             area1.innerHTML += "btn1이 클릭되었습니다.<br>"
         }
 
-        document.getElementById("btn2").onclick = function(){
+        document.getElementById("btn2").onclick = function () {
             area1.innerHTML = "btn2가 클릭되면서 btn1의 이벤트가 제거됨<br>";
             btn1.onclick = null;
         }
@@ -49,7 +51,7 @@
     <h3>*인라인 이벤트 모델</h3> <!--우리가 항상 하는 것-->
     <p>
         요소 내부에 직접적으로 이벤트 속성 제시해서 실핼할 내용을 정의하는 방식 <br>
-        따로  script코드에 작성된 함수를 호출하는 방식이다.
+        따로 script코드에 작성된 함수를 호출하는 방식이다.
     </p>
 
     <button id="btn3" onclick="document.getElementById('area2').innerHTML += '첫번째 버튼클릭<br>'">실행확인</button>
@@ -57,7 +59,7 @@
     <div id="area2" class="area"></div>
 
     <script>
-        function test1(){
+        function test1() {
             document.getElementById('area2').innerHTML += '두번째 버튼 클릭<br>';
 
         }
@@ -67,7 +69,7 @@
 
     <h3>*표준 이벤트 모델</h3>
     <p>
-        w3c에서 공식적으로 지정한 이벤트 모델 
+        w3c에서 공식적으로 지정한 이벤트 모델
     </p>
 
     <button id="btn5">실행확인</button>
@@ -75,18 +77,18 @@
         const btn5 = document.getElementById("btn5");
 
         //이벤트를 걸고자 하는 요소객체.addEventListener("이벤트명",이벤트 핸들러)
-        btn5.addEventListener("click",function(){
+        btn5.addEventListener("click", function () {
             alert("표준이벤트 모델 테스트");
         });
 
-        btn5.addEventListener("mouseenter",function(){
-            btn5.style.background='red';
-            btn5.innerHTML="클릭!!";
+        btn5.addEventListener("mouseenter", function () {
+            btn5.style.background = 'red';
+            btn5.innerHTML = "클릭!!";
         });
 
-        btn5.addEventListener("mouseout",function(){
-            btn5.style.background='#efefef';
-            btn5.innerHTML="실행확인";
+        btn5.addEventListener("mouseout", function () {
+            btn5.style.background = '#efefef';
+            btn5.innerHTML = "실행확인";
         });
 
         // btn5.addEventListener("mouseout",t);
@@ -101,23 +103,23 @@
     <button id="btn6">기본이벤트 방식</button>
     <button id="btn7">표준이벤트 방식</button>
     <button onclick="test5(event,this)">인라인 이벤트 방식1</button>
-    <button >인라인 이벤트 방식2</button>
+    <button>인라인 이벤트 방식2</button>
     <!-- 이벤트가 실행됐을 때 어떤 방응을 시키기위한 함수 -->
     <script>
-        document.getElementById("btn6").onclick = function(ev){ //이벤트핸들러
-            console.log("1. "+ev); //이벤트에 관련된 정보가 들어있는 객체를 첫번째 인자로 넘겨준다.
-            console.log("2. "+window.event); 
+        document.getElementById("btn6").onclick = function (ev) { //이벤트핸들러
+            console.log("1. " + ev); //이벤트에 관련된 정보가 들어있는 객체를 첫번째 인자로 넘겨준다.
+            console.log("2. " + window.event);
 
             //현재 이벤트가 발생한 요소
-            console.log("3. "+ev.target);
+            console.log("3. " + ev.target);
 
             //이벤트를 호출한 요소
-            console.log("4. "+this);
+            console.log("4. " + this);
 
             ev.target.innerHTML = "버튼이 클릭됨";
             this.style.color = "red";
         }
-        document.getElementById("btn7").addEventListener("click",function(ev){
+        document.getElementById("btn7").addEventListener("click", function (ev) {
             console.log(ev.target);
             console.log(this);
         })
@@ -131,33 +133,45 @@
         - form 내의 submit 버튼 : 클릭시 사용자가 입력한 값들을 action에 제시되어있는 url에 제출
         <br><br>
 
-        태그내에 기본적으로 설정되어있는 이벤트가 살행안되게끔 막고싶다. <br>
+        태그내에 기본적으로 설정되어있는 이벤트가 실행안되게끔 막고싶다. <br>
         => 이벤트 핸들러의 return 값을 false로 하면 기본이벤트 실행 안됨
     </p>
 
     <a href="http://www.naver.com" onclick="alert('까-꿍'); return false">네이버로 이동</a>
-    
+
     <br>
 
     <a href="http://www.naver.com" onclick="return test6()">네이버로 이동</a>
 
     <script>
-        function test6(){
-            if(5>3){
+        function test6() {
+            if (5 > 3) {
                 return false;
             }
         }
     </script>
 
     <form action="test.do">
-        아이디 : <input type="text" name = "userId">
+        아이디 : <input type="text" name="userId" id ="user_id">
         <input type="submit" onclick="return validate()">
     </form>
 
     <script>
-        function validate(){
-            return false;
+        function validate() {
+            // 영문자 또는 숫자로만 5~12글자이하가 맞는지
+            //조건에 부합하면 return x
+            //조건에 맞지 않으면 return false;
+
+            const userId = document.getElementById('user_id').value;
+
+
+            const regRxp = /^[a-zA-Z0-9]{5,12}$/;
+            if(!regRxp.test(userId)){ //조건에 부합하지 않을 때 false -> if를 실행하기위해서는 true를 변환
+                alert("유효한 아이디가 아닙니다.");
+                return false;
+            }
         }
     </script>
 </body>
+
 </html>
